@@ -1,4 +1,5 @@
 0.17.4
+ - fix: correctly handle dataset IDs and names in `DBExtract`
  - ref: decorate PyQtSlots
 0.17.3
  - fix: drag'n'drop to DCscope broken since 0.17.0 (#88)
